[gd_scene load_steps=9 format=3 uid="uid://3pv4y1eeyxpr"]

[ext_resource type="Script" path="res://scripts/enemies/bomber_bomb.gd" id="1_dk01r"]
[ext_resource type="Material" uid="uid://uxn8fucitgfr" path="res://resources/materials/level_mat.tres" id="2_fiwpi"]
[ext_resource type="Script" path="res://scripts/physics_lerp.gd" id="2_lwy8y"]
[ext_resource type="ArrayMesh" uid="uid://c2kpfn2afnnxm" path="res://models/dynamic_props/enemy_bomb.obj" id="3_38xue"]

[sub_resource type="SphereShape3D" id="SphereShape3D_p4au6"]
radius = 0.271259

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x8gdi"]
transparency = 1
shading_mode = 0
albedo_color = Color(1, 0.478431, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_qm5gc"]
material = SubResource("StandardMaterial3D_x8gdi")
radius = 0.375
height = 0.75
radial_segments = 12
rings = 6

[sub_resource type="SphereShape3D" id="SphereShape3D_745ba"]
radius = 0.345212

[node name="bomber_bomb" type="StaticBody3D"]
collision_layer = 0
collision_mask = 257
script = ExtResource("1_dk01r")

[node name="sprite" type="MeshInstance3D" parent="."]
top_level = true
material_override = ExtResource("2_fiwpi")
cast_shadow = 0
mesh = ExtResource("3_38xue")
script = ExtResource("2_lwy8y")
global = true
of_parent = true

[node name="hitbox" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_p4au6")

[node name="explosion" type="MeshInstance3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_qm5gc")

[node name="touch_area" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 257

[node name="CollisionShape3D" type="CollisionShape3D" parent="touch_area"]
shape = SubResource("SphereShape3D_745ba")

[node name="death_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[connection signal="body_entered" from="touch_area" to="." method="_on_body_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
